[gd_scene load_steps=5 format=3 uid="uid://d1vaf4mkcj1uy"]

[ext_resource type="Texture2D" uid="uid://binlg6miyyw7v" path="res://assets/characters/minigame_assets/broly_level/part_10.png" id="1_nae2f"]
[ext_resource type="Script" uid="uid://d3w0qf0ftivve" path="res://scripts/world_scripts/last_level/part_10.gd" id="1_vaydh"]
[ext_resource type="PackedScene" uid="uid://ct2rfy2e8m43c" path="res://scenes/player.tscn" id="2_ehgc2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vaydh"]
size = Vector2(55, 20)

[node name="part_10" type="Node2D"]
script = ExtResource("1_vaydh")

[node name="Part10" type="Sprite2D" parent="."]
position = Vector2(240, 180)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_nae2f")

[node name="Player" parent="." instance=ExtResource("2_ehgc2")]
position = Vector2(240, 332)
current_ball = "dragon_ball_7"

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, 1)
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 480
limit_bottom = 360
limit_smoothed = true
rotation_smoothing_enabled = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(36, 132, 69, 132, 69, 110, 167, 110, 167, 132, 202, 132, 202, 168, 216, 168, 216, 6, 264, 6, 264, 168, 276, 168, 276, 132, 312, 132, 312, 109, 411, 109, 411, 132, 444, 132, 444, 312, 264, 312, 264, 358, 216, 358, 216, 312, 36, 312, 36, 134, -10, 146, -11, 394, 520, 396, 506, -26, -9, -31, 31, 138)

[node name="next_scene" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="next_scene"]
position = Vector2(239.5, 12)
shape = SubResource("RectangleShape2D_vaydh")

[node name="previous_scene" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="previous_scene"]
position = Vector2(241, 356)
shape = SubResource("RectangleShape2D_vaydh")

[connection signal="body_entered" from="next_scene" to="." method="_on_next_scene_body_entered"]
[connection signal="body_entered" from="previous_scene" to="." method="_on_previous_scene_body_entered"]
